# scratch_repo

./: .gitignore  README.md  shell.nix
ansible/: ansible.cfg  challenge.yml  change.yml  ntp.yml  orchestration.yml
fast_api_backend/: main.py
fastapi/test_env/: server.py  shell.nix
func_py/: binary_iterative.py  binary_recursive.py  bsearch_v1.py  dijkstra.py  echo-client.py  echo.py  fun.py  graphs.py  hello_world.py  json_data.py  linked_list.py  monotonic_array.py  mpool.py  mprocess.py  reverse_array.py  reverse_array_slicing.py  shell.nix  sock.py
func_py/imgapp/: __init__.py  pyproject.toml  shell.nix
func_py/new-proj-poetry/: pyproject.toml
func_py/new-proj-poetry2/: closures.py  decor.py  decor_import.py  decorators.py  decoratorsv2.py  decoratorsv3.py  fas.py  fasrv.py  fun_prog.py  funct.py  main.py  panos_test.py  procedural_prog.py  pyproject.toml  ran.py  scapytest.py
func_py/poetry-demo/: dt.py  pyproject.toml
integrate_svelte_app_rust_wasm/: flake.nix  old_shell.nix  shell.nix
integrate_svelte_app_rust_wasm/rust/: Cargo.toml
integrate_svelte_app_rust_wasm/rust/src/: lib.rs
integrate_svelte_app_rust_wasm/svelte/: package-lock.json  package.json  rollup.config.js
integrate_svelte_app_rust_wasm/svelte/src/: App.svelte  main.js
python_env/py-dev-env/: pyproject.toml
