[tool.poetry]
name = "imgapp"
version = "0.1.0"
description = "An image app? lul"
authors = ["jklpdgoat <jarpadul@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
Pillow = "^9.4.0"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
imgapp = 'imgapp:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
