[tool.poetry]
name = "new-proj-poetry"
version = "0.1.0"
description = ""
authors = ["jklpdgoat <jarpadul@gmail.com>"]
readme = "README.md"
packages = [{include = "new_proj_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
