[tool.poetry]
name = "new-proj-poetry2"
version = "0.1.0"
description = ""
authors = ["jklpdgoat <jarpadul@gmail.com>"]
readme = "README.md"
packages = [{include = "new_proj_poetry2"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
pendulum = "^2.1.2"
scapy = "^2.5.0"
pan-os-python = "^1.8.1"
requests = "^2.28.2"
xmltodict = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
