[tool.poetry]
name = "py-dev-env"
version = "0.1.0"
description = ""
authors = ["jklpdgoat <jarpadul@gmail.com>"]
readme = "README.md"
packages = [{include = "py_dev_env"}]

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
